--- a/_mobile.scss
+++ b/_mobile.scss
@@ -21,8 +21,9 @@
         line-height: 22px;
         text-align: center;
         padding-bottom: 32px;
+    }
 }
-}
+
 .main {
     &__content {
         flex-direction: column;
@@ -32,6 +33,28 @@
     &__photo {
         max-width: 343px;
     }
+}
 
+.first {
+    &__content {
+        padding-top: 51px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        &_text{
+            padding-bottom: 64px;
+        }
+        &_image { 
+        }
+    }
+    &__title {
+        width: 343px;
+        font-size: 32px;
+    }
+    &__subtitle {
+        width: 343px;
+        font-size: 14px;
+        line-height: 22px;
+    }
 }
 }
