--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ a {
 .top__subtitle_bold {
   font-weight: 700;
 }
-.top__button {
+
+.button {
   background: #9C0332;
   border-radius: 30px;
   border-color: transparent;
@@ -101,6 +102,36 @@ a {
   text-decoration: none;
 }
 
+.first {
+  background-color: #000915;
+}
+.first__content {
+  padding-top: 282px;
+  flex-direction: row;
+}
+.first__content_text {
+  max-width: 584px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  padding-bottom: 282px;
+}
+.first__title {
+  color: #FFF;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.first__subtitle {
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+}
+
 @media (max-width: 767px) {
   .center {
     padding-left: 16px;
@@ -129,5 +160,23 @@ a {
   }
   .main__photo {
     max-width: 343px;
+  }
+  .first__content {
+    padding-top: 51px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .first__content_text {
+    padding-bottom: 64px;
+  }
+  .first__title {
+    width: 343px;
+    font-size: 32px;
+  }
+  .first__subtitle {
+    width: 343px;
+    font-size: 14px;
+    line-height: 22px;
   }
 }/*# sourceMappingURL=style.css.map */
