--- a/style.scss
+++ b/style.scss
@@ -52,22 +52,23 @@ a {
         &_bold {
             font-weight: 700;
           }
-    }
-    &__button {
-        background: #9C0332;
-        border-radius: 30px;
-        border-color: transparent;
-        height: 48px;
-        width: 234px;
-        align-items: center;
-        text-align: center;
-        color: #FFF;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-    }
-  }
+}
+}
+
+.button {
+    background: #9C0332;
+    border-radius: 30px;
+    border-color: transparent;
+    height: 48px;
+    width: 234px;
+    align-items: center;
+    text-align: center;
+    color: #FFF;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
 .main {
     background: #000;
@@ -103,5 +104,37 @@ a {
     } 
 }
 
+.first {
+    background-color: #000915;
+    &__content {
+        padding-top: 282px;
+        flex-direction: row;
+        &_text{
+            max-width: 584px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 32px;
+            padding-bottom: 282px;
+            }
+            &_image {
+                
+            }
+    }
+        &__title {
+            color: #FFF;
+            font-size: 48px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        }
+        &__subtitle {
+            color: #FFF;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 32px;
+        }
+}
 @import 'mobile';
   
