--- a/_mobile.scss
+++ b/_mobile.scss
@@ -30,7 +30,7 @@
         align-items: center;
         gap: 32px;
     }
-    &__photo {
+    &__game {
         max-width: 343px;
     }
 }
@@ -45,6 +45,8 @@
             padding-bottom: 64px;
         }
         &_image { 
+            max-width: 344px;
+            max-height: 236px;
         }
     }
     &__title {
