--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ a {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  transition: all 0.3s;
+}
+
+.button:hover {
+  background-color: #EB443F;
 }
 
 .main {
@@ -81,8 +86,13 @@ a {
 }
 .main__conteiner {
   position: relative;
+  transition: all 0.3s;
 }
-.main__photo {
+.main__conteiner:hover {
+  border-radius: 16px;
+  border: 3px solid #44D2FF;
+}
+.main__game {
   max-width: 379px;
   max-height: 300px;
   border-radius: 16px;
@@ -166,7 +176,7 @@ a {
     align-items: center;
     gap: 32px;
   }
-  .main__photo {
+  .main__game {
     max-width: 343px;
   }
   .first__content {
@@ -177,6 +187,10 @@ a {
   }
   .first__content_text {
     padding-bottom: 64px;
+  }
+  .first__content_image {
+    max-width: 344px;
+    max-height: 236px;
   }
   .first__title {
     width: 343px;
