--- a/style.scss
+++ b/style.scss
@@ -101,6 +101,7 @@ a {
     }
 
     &__game {
+        width: 100%;
         max-width: 379px;
         max-height: 300px;
         border-radius: 16px;
@@ -143,6 +144,7 @@ a {
         }
 
         &_image {
+            width: 100%;
             max-width: 485px;
             max-height: 333px;
         }
