--- a/style.css
+++ b/style.css
@@ -90,9 +90,10 @@ a {
 }
 .main__conteiner:hover {
   border-radius: 16px;
-  border: 3px solid #44D2FF;
+  outline: 3px solid #44D2FF;
 }
 .main__game {
+  width: 100%;
   max-width: 379px;
   max-height: 300px;
   border-radius: 16px;
@@ -132,6 +133,7 @@ a {
   gap: 32px;
 }
 .first__content_image {
+  width: 100%;
   max-width: 485px;
   max-height: 333px;
 }
