--- a/style.scss
+++ b/style.scss
@@ -95,9 +95,10 @@ a {
         position: relative;
         transition: all 0.3s;
     }
+
     &__conteiner:hover {
         border-radius: 16px;
-        border: 3px solid #44D2FF;
+        outline: 3px solid #44D2FF;
     }
 
     &__game {
