--- a/style.scss
+++ b/style.scss
@@ -145,6 +145,7 @@ a {
         gap: 32px;
     }
 }
+
 .title {
     color: #FFF;
     font-size: 48px;
@@ -165,6 +166,10 @@ a {
     width: 100%;
     max-width: 485px;
     max-height: 333px;
+}
+
+.second-game {
+    background-color: #000915;
 }
 
 
