--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,62 +1,71 @@
 @media (max-width: 767px) {
 
-.center {
-    padding-left: 16px;
-    padding-right: 16px;
-}
+    .center {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
 
-.top {
-    &__content {
-        padding-top: 238px;
-        align-items: center;
-    }
-    &__title {
-        width: 343px;
-        text-align: center;
-        font-size: 32px;
-    }
-    &__subtitle {
-        width: 343px;
-        font-size: 14px;
-        line-height: 22px;
-        text-align: center;
-        padding-bottom: 32px;
-    }
-}
+    .top {
+        &__content {
+            padding-top: 238px;
+            align-items: center;
+        }
 
-.main {
-    &__content {
-        flex-direction: column;
-        align-items: center;
-        gap: 32px;
-    }
-    &__game {
-        max-width: 343px;
-    }
-}
+        &__title {
+            width: 343px;
+            text-align: center;
+            font-size: 32px;
+        }
 
-.first {
-    &__content {
+        &__subtitle {
+            width: 343px;
+            font-size: 14px;
+            line-height: 22px;
+            text-align: center;
+            padding-bottom: 32px;
+        }
+    }
+
+    .main {
+        &__content {
+            flex-direction: column;
+            align-items: center;
+            gap: 32px;
+        }
+
+        &__game {
+            max-width: 343px;
+        }
+    }
+
+    .content {
         padding-top: 51px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        &_text{
+        padding-bottom: 0px;
+
+        &_text {
             padding-bottom: 64px;
         }
-        &_image { 
-            max-width: 344px;
-            max-height: 236px;
+    }
+
+    .image {
+        max-width: 344px;
+        max-height: 236px;
+        &_second-game {
+            padding-bottom: 81px;
         }
     }
-    &__title {
+
+    .title {
         width: 343px;
         font-size: 32px;
     }
-    &__subtitle {
+
+    .subtitle {
         width: 343px;
         font-size: 14px;
         line-height: 22px;
     }
-}
 }
